远程版优化服务退出逻辑
